@@ -16,6 +16,11 @@ namespace Mwu{
 			void init(const char* title,const char* description);
 			void fload(const char *module);
 			void end();
+			Frame(const char* title, const char * descr);
+			~Frame();
+		private:
+			const char * cDescription;
+			const char * cTitle;
 	};
 
 }
